==> brucebotes/my_lcd12864_st7565_pi_pico/stlcd.c <==
#include "stlcd.h"
#include "glcd.h"

void testdrawbitmap(uint8_t *buff, const uint8_t *bitmap, uint8_t w,
                    uint8_t h) {
  uint8_t icons[NUMFLAKES][3];
  srandom(buff[666]);

  // initialize
  for (uint8_t f = 0; f < NUMFLAKES; f++) {
    icons[f][XPOS] = random() % 128;
    icons[f][YPOS] = 0;
    icons[f][DELTAY] = random() % 5 + 1;
  }

  while (1) {
    // draw each icon
    for (uint8_t f = 0; f < NUMFLAKES; f++) {
      drawbitmap(buffer, icons[f][XPOS], icons[f][YPOS], logo16_glcd_bmp, w, h,
                 1);
    }
    write_buffer(buffer);
    sleep_ms(200);

    // then erase it + move it
    for (uint8_t f = 0; f < NUMFLAKES; f++) {
      drawbitmap(buffer, icons[f][XPOS], icons[f][YPOS], logo16_glcd_bmp, w, h,
                 0);
      // move it
      icons[f][YPOS] += icons[f][DELTAY];
      // if its gone, reinit
      if (icons[f][YPOS] > 64) {
        icons[f][XPOS] = random() % 128;
        icons[f][YPOS] = 0;
        icons[f][DELTAY] = random() % 5 + 1;
      }
    }
  }
}

void testdrawline(uint8_t *buff) {
  for (uint8_t i = 0; i < 128; i += 4) {
    drawline(buffer, 0, 0, i, 63, 1);
  }
  for (uint8_t i = 0; i < 64; i += 4) {
    drawline(buffer, 0, 0, 127, i, 1);
  }

  write_buffer(buffer);
  //_delay_ms(1000);
  sleep_ms(1000);

  for (uint8_t i = 0; i < 128; i += 4) {
    drawline(buffer, i, 63, 0, 0, 0);
  }
  for (uint8_t i = 0; i < 64; i += 4) {
    drawline(buffer, 127, i, 0, 0, 0);
  }
}

void st7565_init(void) {
  // enable Black light
  // gpio_put(BLA_PIN, 1); future

  // toggle RST low to reset; CS low so it'll listen to us
  cs_select();
  gpio_put(RST_PIN, 0); // set low
  sleep_ms(500);
  gpio_put(RST_PIN, 1); // set high

  // LCD bias select
  st7565_command(CMD_SET_BIAS_7);
  // ADC select
  st7565_command(CMD_SET_ADC_NORMAL);
  // SHL select
  st7565_command(CMD_SET_COM_NORMAL);
  // Initial display line
  st7565_command(CMD_SET_DISP_START_LINE);
  // Set reverse display
  //st7565_command(CMD_SET_DISP_REVERSE);

  // turn on voltage converter (VC=1, VR=0, VF=0)
  st7565_command(CMD_SET_POWER_CONTROL | 0x4);
  // wait for 50% rising
  sleep_ms(50);

  // turn on voltage regulator (VC=1, VR=1, VF=0)
  st7565_command(CMD_SET_POWER_CONTROL | 0x6);
  // wait >=50ms
  sleep_ms(50);

  // turn on voltage follower (VC=1, VR=1, VF=1)
  st7565_command(CMD_SET_POWER_CONTROL | 0x7);
  // wait
  sleep_ms(50);

  // set lcd operating voltage (regulator resistor, ref voltage resistor)
  st7565_command(CMD_SET_RESISTOR_RATIO | 0x6);

  // initial display line
  // set page address
  // set column address
  // write display data
}

inline void spiwrite(uint8_t c) {
  cs_select();
  spi_write_blocking(spi_default, &c, 1);
  cs_deselect();
}

void st7565_command(uint8_t c) {
  gpio_put(AO_PIN, 0); //set low for command

  spiwrite(c);
}

void st7565_data(uint8_t c) {
  gpio_put(AO_PIN, 1); // set high for data

  spiwrite(c);
}
